# screening-engine

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_CHECKLIST.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.frontend  EVERYTHING_COMPLETE.md  INVESTIGATION_V39_FAILURE.md  OVERVIEW.md  README.md  REAL_TIME_VISUALIZATION_GUIDE.md  SETUP_ENV.md  deploy-all.sh  deploy-infra.yaml  deploy-lambda.py  deploy-simple.sh  deploy-to-ec2.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  ecs-infrastructure.yaml  monitor-deployment.sh  pyproject.toml  redeploy.sh  render.yaml  requirements.txt  setup-api-keys.sh  setup-auto-deploy.sh  setup-ecs.sh
.claude/: settings.json
.github/workflows/: deploy-ecs.yml  deploy.yml
docs/: AutoResearch_BOOM_Plan.md  AutoResearch_Integration_Proposal.md  CHANGELOG.md  FEEDBACK_ENHANCEMENT_COMPLETE.md  FEEDBACK_LEARNING_GUIDE.md  FIX_PRIORITY_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LEARNING_SYSTEM_DIAGRAM.md  QUICK_START_LEARNING.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
scripts/: ingest_tickers.py  init_db.py  migrate.py  run_pipeline.py  run_server.py  start.sh  start_dashboard.sh  start_mcp.sh  supabase_setup.sql
src/api/: router.py
src/config/: __init__.py  constants.py  scoring_weights.py  scoring_weights.yaml  settings.py
src/dashboard/: app.py
src/db/: __init__.py  session.py
src/feedback/: __init__.py  (+2 more)
terraform/: deploy.sh  ecs.tf  main.tf  terraform.tfvars.example
(+195 files in other folders)
