[project]
name = "phoenician-screening-engine"
version = "0.1.0"
description = "Intelligent Screening & Recommendation Engine for Phoenician Capital"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
